--- a/style.css
+++ b/style.css
@@ -1,195 +1,326 @@
 :root {
---dark-blue: #818D9B;
---light-blue: #CAC8CB;
---blue: #293B49;
---beige: #EDE6DC;
---text-light: #C49D7C;
---text-dark:#A86F44;
---brown: #794722;
-}
-
-body{
-    display: flex;
-    flex-direction: column;
-    background-image: linear-gradient(var(--dark-blue), var(--light-blue));
-    background-repeat: no repeat;
-    margin: 0;
-    background-attachment: fixed;
-}
-
-header{
-    background-color: var(--dark-blue);
-    height: 60px;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    box-shadow: var(--light-blue) 0px 5px 10px;
-    margin-top:0;
-}
-
-header h1{
-    color: white;
-    font-size: 30px;
-    margin-left: 30px;
-}
-
-#list{
-    margin-left: 600px;
-}
-
-#list li{
-    display: inline;
-}
-
-#list a{
-    justify-content: space-between;
-    margin-left: 50px;
-    color: white;
-    font-size: 20px;
-    text-decoration: none;
-}
-
-p{
-    font-size: 20px;
-    margin: 0px;
-    line-height: 20px;
-    display: block;
-    margin-left: 150px;
-    margin-top: 180px;
-    color: white;
-
-}
-
-#name{
-    display: block;
-    margin-left: 160px;
-    margin-top: 25px;
-    align-items: center;
-    font-size: 50px;
-    color: var(--blue);
+    --dark-blue: #818D9B;
+    --light-blue: #CAC8CB;
+    --blue: #293B49;
+    --beige: #EDE6DC;
+    --text-light: #C49D7C;
+    --text-dark:#A86F44;
+    --brown: #794722;
+    }
     
-}
-
-.intro{
-    margin-top: 0px;
-}
-
-.side{
-    display: flex; 
-    height:100vh;
-}
-
-#code{
-    margin-left: 400px;
-    margin-top: 180px;
-    font-size: 20px;
-}
-
-.ava-intro{
-    display: flex;
-}
-
-.center{
-    height: 60px;
-    width: 200px;
-    text-align:center;
-    font-size: 25px;
-    position: relative;
-    left: 450px;
-}
-
-.me{
-    margin-top: 100px;
-    margin-left: 20px;
-    height: 200px;
-    width: 600px;
-    line-height: 30px;
-    text-align: center;
-}
-
-.avatar img, .coffee img{
-    object-fit: contain;
-    width: 300px;
-    height: 300px;
-    margin-left: 150px;
-    margin-top:30px;
-}
-
-#project{
-    position:relative;
-    top: 200px;
-}
-
-.process{
-    position: relative;
-    top: 50px;
-    left: 350px;
-}
-
-/* .inline{
-    display: flex;
-}
-
-.move{
-    position: relative;
-    top: 600px;
-}
-
-.move section{
-    box-sizing: content-box;
-    height: 400px;
-    width: 800px;
-}
-
-div .next{
-    box-sizing: content-box;
-    height: 100px;
-    width: 400px;
-}
-
-.next .know{
-    position: relative;
-    left: 80px;
-    margin-top: 30px;
-    box-sizing: border-box;
-    height: 100px;
-    width: 400px;
-    line-height: 30px;
-    text-align: center;
-}
-
-.contact{
-    position: relative;
-    left: 230px;
-    font-size: 19px;
-    line-height: 50px;
-    list-style: none;
-    box-sizing: border-box;
-    height: 100px;
-    width: 400px;
-}
-
-div .coffee img{
-    object-fit: contain;
-    box-sizing: border-box;
-    width: 500px;
-    height: 400px;
-    position: relative;
-    left: 400px;
+    *{
+        margin: 0;
+        padding:0;
+    }
     
-
-}
- */
-
- .two, .about, .move{
-    height:100vh;
- }
-
- .know{
-     margin: 0px;
-     display: block;
-     box-sizing: content-box;
-     height: 60px;
-     width: 400px;
+    body{
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(1, 0, 24);
+        margin: 0;
+        background-attachment: fixed;
+    }
     
- }
+    header{
+        background-color: rgb(1, 0, 24);
+        height: 60px;
+        width: 100%;
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+        box-shadow:  white 4px 5px 10px;
+        margin-top:0;
+    }
+    
+    header h1{
+        background-color: #f3ec78;
+        background-image: linear-gradient(45deg, #f3ec78, #af4261);
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent; 
+        -moz-text-fill-color: transparent;
+        font-size: 30px;
+        margin-left: 30px;
+    }
+    
+    #list{
+        margin-left: 600px;
+    }
+    
+    #list li{
+        display: inline;
+    }
+
+    #list li a:hover{
+        color: #af4261;
+        font-size: 19px;
+        text-shadow: var(--blue) 2px 2px 3px;
+    }
+    
+    #list a{
+        justify-content: space-between;
+        margin-left: 50px;
+        color: #efaa8a;
+        font-size: 20px;
+        text-decoration: none;
+    }
+
+    .main {
+        background-image: url("https://as2.ftcdn.net/v2/jpg/03/00/94/69/1000_F_300946931_kSR84OqudEhsmBZH47HU6ud7aZIDMjEx.jpg");
+       background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 100vh;
+        width:100%;
+        opacity: 0.4;
+    }
+
+    
+    p{
+        font-size: 20px;
+        line-height: 60px;
+        display: block;
+        margin-left: 150px;
+        margin-top: 180px;
+        color: white;
+        font-weight: bold;
+    }
+    
+    #name{
+        display: block;
+        margin-left: 160px;
+        align-items: center;
+        font-size: 50px;
+        background-color: #f3ec78;
+        background-image: linear-gradient(45deg, #f3ec78, #af4261);
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent; 
+        -moz-text-fill-color: transparent;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    }
+
+    
+    
+    .intro{
+        margin-top: 0px;
+    }
+    
+    .side{
+        display: flex; 
+        height:100vh;
+    }
+    
+    #code{
+        margin-left: 400px;
+        margin-top: 200px;
+        font-size: 20px;
+        background-color: #f3ec78;
+        background-image: linear-gradient(45deg, #f3ec78, #e33282);
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent; 
+        -moz-text-fill-color: transparent;
+    }
+    
+    .ava-intro{
+        display: flex;
+    }
+    
+    .about section,
+    .two section{
+        position: relative;
+        top: 130px;
+    }
+    
+    .move{
+        position: relative;
+        top: 50px;
+    }
+    
+    .center{
+        height: 60px;
+        width: 200px;
+        text-align:center;
+        font-size: 25px;
+        position: relative;
+        left: 450px;
+        color: #f3ec78;
+        text-shadow: #af4261 2px 2px 3px;
+    }
+    
+    .me{
+        margin-top: 100px;
+        margin-left: 20px;
+        height: 200px;
+        width: 600px;
+        line-height: 30px;
+        text-align: center;
+    }
+    
+    .avatar img{
+        object-fit: contain;
+        width: 300px;
+        height: 300px;
+        margin-left: 150px;
+        margin-top:30px;
+    }
+    
+    
+    .process{
+        position: relative;
+        left: 350px;
+    }
+    .two, .about{
+        height:100vh;
+     }
+    
+     .know{
+         margin: 0px;
+         display: block;
+         box-sizing: content-box;
+         height: 60px;
+         width: 400px;
+         line-height: 30px;
+        
+     }
+    
+     div a{
+        position: relative;
+        top: 150px;
+        right: 350px;
+        display: inline;
+        height: 30px;
+        width: 50px;
+     }
+     
+     div i{
+        justify-content: space-between;
+        margin-left: 20px;
+
+    }
+    
+    
+    i{
+        color: #af4261;
+        font-size: 40px;
+        /* position: relative;
+        top: 150px;
+        right: 350px; */
+    }
+    
+    i:hover{
+        color: #f3ec78;
+        font-size: 50px;
+    }
+    
+    .coffee{
+         display:flex;
+         flex-direction: row;
+         position: relative;
+         left: 200px;
+         margin-bottom: 100px;
+         margin-top: 40px;
+    }
+    
+    form input, textarea, button{
+        display: block;
+        border: 2px solid black;
+        border-radius: 7px;
+        margin: 10px;
+    }
+    
+    form input{
+        height: 50px;
+        width: 400px;
+    }
+    
+    form{
+        position: relative;
+        left: 10px;
+    }
+    
+    textarea{
+        width: 100%;
+        height: 80px;
+        width: 405px;
+        box-sizing: border-box;
+        resize: none;
+    }
+    
+    .box{
+        font-size: 16px;
+    }
+    
+    button{
+        background-color: #af4261 ;
+        cursor: pointer;
+        color:white ;
+        font-size: 20px;
+    }
+    
+    button:hover{
+        background-color: #f3ec78;
+        color: #af4261;
+        box-shadow: 1px 2px var(--dark-blue);
+    }
+    
+    .horizontal{
+        border: 1px solid whitesmoke;
+    }
+    
+    footer h3{
+        text-align: center;
+        background-color: white;
+        height: 50px;
+        color:rgb(1, 0, 24);
+        position: absolute;
+        width: 100%;
+        padding-top: 19px;
+    }
+
+    @media screen and (max-width: 992px) {
+        #list li {
+            position: relative;
+            right: 200px;
+            font-size: 20px;
+        }
+
+        .left {
+            position: relative;
+            right: 100px;
+        }
+
+        #code {
+            position: relative;
+            right: 300px;
+        }
+        
+        header h1 {
+            text-align:center; 
+            font-size: 25px;     
+        }
+
+        .divide, .about, .two{
+            height: 100vh ;
+        }
+
+        .coffee .know,
+        .coffee div a{
+            position: relative;
+            right: 120px;
+        }
+
+        div a{
+            height: 50px;
+            width: 60px;
+        }
+
+        div a i {
+           right: 200px;
+        }
+    }
