--- a/style.css
+++ b/style.css
@@ -189,14 +189,14 @@
         
      }
     
-     div a{
+     /* div a{
         position: relative;
         top: 150px;
         right: 350px;
         display: inline;
         height: 30px;
         width: 50px;
-     }
+     } */
      
      div i{
         justify-content: space-between;
@@ -309,11 +309,11 @@
             height: 100vh ;
         }
 
-        .coffee .know,
+        /* .coffee .know,
         .coffee div a{
             position: relative;
             right: 120px;
-        }
+        } */
 
         div a{
             height: 50px;
